force-app/main/default/objects/ssot__FinancialGoal__dlm/fields/ssot__FinancialGoalPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__FinancialGoalPriority__c</fullName>
    <label>Financial Goal Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FinancialGoalPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>