force-app/main/default/objects/ssot__FinancialGoal__dlm/fields/ssot__FinancialPlanId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FinancialPlanId__c</fullName>
    <label>Financial Plan</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FinancialPlanId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>