force-app/main/default/objects/ssot__FinancialGoal__dlm/fields/ssot__InitialValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__InitialValueAmount__c</fullName>
    <label>Initial Value Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InitialValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>