force-app/main/default/objects/ssot__FinancialGoal__dlm/fields/ssot__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetDate__c</fullName>
    <label>Target Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>